[package]
name = "mef2tmf"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Ruckley <rruckley@gmail.com"]
description = "Library to translate from MEF into TMF"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.195"
serde_json = "1.0.111"
meflib = { path = "../meflib"}
tmflib = { version = "0.1.17", feature = ["v4"]}
